--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-app",
-  "homepage": "http://localhost:3000/",
+  "homepage": "http://fk.btlbd.xyz/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
