--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
     "react": "^16.10.2",
+    "react-datepicker": "^2.10.1",
     "react-dom": "^16.10.2",
     "react-image-lightbox": "^5.1.1",
     "react-modal": "^3.11.1",
