--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "my-app",
-  "homepage": "http://fk.btlbd.xyz/",
+  "homepage": "http://fantasykingdom.btlbd.xyz/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "dateformat": "^3.0.3",
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
     "react": "^16.10.2",
