Room available check

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-app",
-  "homepage": "http://fantasykingdom.btlbd.xyz/",
+  "homepage": "https://fantasykingdom.btlbd.xyz/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
