--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
     "react": "^16.10.2",
+    "react-awesome-spinners": "^1.3.1",
     "react-datepicker": "^2.10.1",
     "react-dom": "^16.10.2",
     "react-image-lightbox": "^5.1.1",
@@ -22,6 +23,7 @@
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^4.4.1",
     "sweetalert2": "^9.4.0"
   },
   "scripts": {
