--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "moment": "^2.24.0",
     "react": "^16.10.2",
     "react-awesome-spinners": "^1.3.1",
+    "react-collapsible": "^2.6.2",
     "react-datepicker": "^2.10.1",
     "react-dom": "^16.10.2",
+    "react-html-parser": "^2.0.2",
     "react-image-lightbox": "^5.1.1",
     "react-image-magnify": "^2.7.4",
     "react-modal": "^3.11.1",
