--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "react-dom": "^16.10.2",
     "react-html-parser": "^2.0.2",
     "react-image-lightbox": "^5.1.1",
-    "react-image-magnify": "^2.7.4",
     "react-modal": "^3.11.1",
     "react-moment": "^0.9.6",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-slick": "^0.25.2",
+    "react-tooltip": "^3.11.1",
     "react-youtube": "^7.9.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
