--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.10.2",
     "react-awesome-spinners": "^1.3.1",
     "react-collapsible": "^2.6.2",
+    "react-currency-format": "^1.0.0",
     "react-datepicker": "^2.10.1",
     "react-dom": "^16.10.2",
     "react-html-parser": "^2.0.2",
