--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "react-currency-format": "^1.0.0",
         "react-datepicker": "^2.10.1",
         "react-dom": "^16.10.2",
+        "react-facebook-login": "^4.1.1",
         "react-html-parser": "^2.0.2",
         "react-image-lightbox": "^5.1.1",
         "react-modal": "^3.11.1",
