--- a/public/.htaccess
+++ b/public/.htaccess
@@ -8,4 +8,10 @@
   RewriteCond %{REQUEST_FILENAME} !-l
   RewriteRule . /index.html [L]
 
+
+
+RewriteEngine On
+RewriteCond %{SERVER_PORT} 80
+RewriteRule ^(.*)$ https://fantasykingdom.btlbd.xyz/$1 [R,L]
+
 </IfModule>
