Update new feedbac

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "my-app",
-    "homepage": "https://fantasykingdom.btlbd.xyz/",
+    "homepage": "http://fantasy.btlbd.tk/",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
